nabvar spacing fixed

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -57,6 +57,15 @@ main {
   height: auto;
 }
 
+.homepage-link {
+  position: absolute;
+  color: #fff;
+  display: inline-block;
+  font-size: 2.1rem;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
 .single-dog-image {
   max-width: 10vw;
   height: auto;
